--- a/mybatis-3/mybatis-3.5.6/pom.xml
+++ b/mybatis-3/mybatis-3.5.6/pom.xml
@@ -41,73 +41,6 @@
 
     <inceptionYear>2009</inceptionYear>
 
-    <contributors>
-        <contributor>
-            <name>Adam Gent</name>
-            <email>adam.gent@evocatus.com</email>
-        </contributor>
-        <contributor>
-            <name>Andrea Selva</name>
-            <email>selva.andre@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Antonio Sánchez</name>
-            <email>juntandolineas@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Arkadi Shishlov</name>
-            <email>arkadi.shishlov@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Axel Doerfler</name>
-            <email>axel.doerfler@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Chris Dadej</name>
-            <email>chris.dadej@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Denis Vygovskiy</name>
-            <email>qizant@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Franta Mejta</name>
-            <email>mejta@rewor.cz</email>
-        </contributor>
-        <contributor>
-            <name>Jurriaan Pruys</name>
-            <email>jurriaan@pruys.com</email>
-        </contributor>
-        <contributor>
-            <name>Keith Wong</name>
-            <email>wongkwl@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Lasse Voss</name>
-            <email>lasse.voss@motor-talk-gmbh.de</email>
-        </contributor>
-        <contributor>
-            <name>Luke Stevens</name>
-            <email>nosuchluke@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Paul Krause</name>
-            <email>paulkrause88@alum.mit.edu</email>
-        </contributor>
-        <contributor>
-            <name>Peter Leibiger</name>
-            <email>kuhnroyal@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Riccardo Cossu</name>
-            <email>riccardo.cossu@gmail.com</email>
-        </contributor>
-        <contributor>
-            <name>Tomáš Neuberg</name>
-            <email>neuberg@m-atelier.cz</email>
-        </contributor>
-    </contributors>
-
     <scm>
         <url>http://github.com/mybatis/mybatis-3</url>
         <connection>scm:git:ssh://github.com/mybatis/mybatis-3.git</connection>
@@ -131,6 +64,7 @@
     </distributionManagement>
 
     <properties>
+
         <clirr.comparisonVersion>3.4.6</clirr.comparisonVersion>
         <excludedGroups>TestcontainersTests</excludedGroups>
         <maven.compiler.testCompilerArgument>-parameters</maven.compiler.testCompilerArgument>
@@ -139,6 +73,8 @@
         <osgi.import>*;resolution:=optional</osgi.import>
         <osgi.dynamicImport>*</osgi.dynamicImport>
         <spotbugs.onlyAnalyze>org.apache.ibatis.*</spotbugs.onlyAnalyze>
+        <!--add-->
+        <spring.version>5.2.7.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -279,6 +215,50 @@
             <version>1.14.3</version>
             <scope>test</scope>
         </dependency>
+
+      <!--自己添加的依赖-->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
+      </dependency>
+
+      <!--添加Spring模块依赖-->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${spring.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${spring.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <!--guava-->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>29.0-jre</version>
+      </dependency>
+
+
     </dependencies>
 
     <build>
